--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ docs/_build/
 target/
 
 # Jupyter Notebook
+.ipynb
 .ipynb_checkpoints
 
 # IPython
@@ -164,3 +165,4 @@ cython_debug/
 # Custom ignore for the project
 wandb/
 results/
+.out
