--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+Bottleneck==1.4.0
 Cartopy==0.23.0
-dask==2024.7.0
+dask==2024.7.1
+distributed==2024.7.1
 matplotlib==3.8.4
 numpy==2.0.0
 torch==2.3.1
